[metadata]
name = booq
version = 0.0.1
description = Python implementation of booq - a tool calculating binary year to date metrics with monthly cumulative slices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sthagen/python-booq
author = Stefan Hagen
author_email = stefan@hagen.link

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8.10
install_requires =
    PyYAML>=6.0
    first>=2.0.2
    jmespath>=1.0.1
    jsonschema>=4.7.2
    kdl-py @ https://github.com/sthagen/kdl-py/archive/refs/tags/v0.1.5.1-fork.tar.gz
    lxml>=4.9.1
    orjson>=3.7.7
    toml>=0.10.2
    typer>=0.6.1
    xmlschema>=1.11.3
packages = find:

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 12
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=mapology
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
