[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Python implementation of booq - a tool calculating binary year to date metrics with monthly cumulative slices.
home_page = https://git.sr.ht/~sthagen/booq

keywords =
    developer-tools
    validation
    verification

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = booq

project_urls =
    Bug Tracker = https://todo.sr.ht/~sthagen/booq
    Documentation = https://codes.dilettant.life/docs/booq
    Source Code = https://git.sr.ht/~sthagen/booq
    Test Coverage = https://codes.dilettant.life/coverage/booq

url = https://git.sr.ht/~sthagen/booq
version = 2022.8.9

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
    PyYAML>=6.0
    first>=2.0.2
    jmespath>=1.0.1
    jsonschema>=4.8.0
    lxml>=4.9.1
    orjson>=3.7.11
    toml>=0.10.2
    typer>=0.6.1
    xmlschema>=2.0.1

packages = find:

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    booq = booq.cli:main

[options.extras_require]
dev =
    black
    coverage
    flake8
    hypothesis
    mypy
    pytest
    pytest-cov
    pytest-flake8
    types-jmespath

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = test
filterwarnings = error

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=booq
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True
implicit_reexport = True

[flake8]
max-line-length = 120
max-complexity = 42
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
